# pyclang-format

./: .clang-format  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml
src/pyclang_format/: __init__.py  _format.cpp  _format.pyi
tests/: test_format.py
